[gd_scene load_steps=6 format=1]

[ext_resource path="res://Movimiento.gd" type="Script" id=1]
[ext_resource path="res://shooter.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 13.6667, 17.1855 )

[node name="Player" type="KinematicBody2D"]

transform/pos = Vector2( -320, -768 )
transform/scale = Vector2( 0.999999, 1 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 3, 0, 0, 3, -0.04422, -0.0804443 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 2.34146, 0, 0, 0.931014, 0, 16 )
shapes/1/trigger = true
collision/layers = 1
collision/mask = 0
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="shooter" type="Node2D" parent="."]

transform/pos = Vector2( 50, 0 )
transform/scale = Vector2( 0.5, 0.5 )
script/script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]

transform/pos = Vector2( 1.15633e-05, 0.669312 )
transform/scale = Vector2( 1, 1 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="Collision_Normal" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -0.04422, -0.0804443 )
transform/scale = Vector2( 3, 3 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Collision_Agachado" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, 16 )
transform/scale = Vector2( 2.34146, 0.931014 )
shape = SubResource( 2 )
trigger = true
_update_shape_index = 1

[connection signal="looking_left" from="." to="shooter" method="_on_KinematicBody2D_looking_left"]

[connection signal="looking_right" from="." to="shooter" method="_on_KinematicBody2D_looking_right"]


